--- a/index.html
+++ b/index.html
@@ -1,262 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HEMIMEME - Meme Platform</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HEMIMEME</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>
-    .meme-card {
-      max-width: 800px;
-      margin: 2rem auto;
-      background: white;
-      border-radius: 15px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.esm.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script type="module">
+    import { connectWallet, handleDisconnect } from './connectButton.js';
+    import { initializeContract, loadMemes, voteMeme, addMeme } from './blockchain.js';
+
+    document.getElementById('connectButton').addEventListener('click', async () => {
+      if (document.getElementById('connectButton').textContent.includes('Disconnect')) {
+        handleDisconnect();
+      } else {
+        await initializeContract();
+        await updateMemeList();
+      }
+    });
+
+    document.getElementById('memeForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const discord = document.getElementById('discordUsername').value;
+      const title = document.getElementById('memeTitle').value;
+      const url = document.getElementById('memeUrl').value;
+      try {
+        await addMeme(title); // В контракте хранится только название, URL и Discord можно хранить локально
+        document.getElementById('memeForm').reset();
+        await updateMemeList();
+      } catch (error) {
+        console.error('Ошибка добавления мема:', error);
+      }
+    });
+
+    window.voteMeme = async (memeId) => {
+      await voteMeme(memeId);
+      await updateMemeList();
+    };
+
+    async function updateMemeList() {
+      try {
+        const memes = await loadMemes();
+        const memeList = document.getElementById('memeList');
+        memeList.innerHTML = '';
+        memes.forEach(meme => {
+          const memeElement = document.createElement('div');
+          memeElement.className = 'p-4 bg-white rounded-lg shadow-md';
+          memeElement.innerHTML = `
+            <h3 class="text-lg font-semibold">${meme.title}</h3>
+            <p class="text-gray-600">Голосов: ${meme.votes}</p>
+            <button onclick="voteMeme(${meme.id})" class="mt-2 bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Голосовать</button>
+          `;
+          memeList.appendChild(memeElement);
+        });
+      } catch (error) {
+        console.error('Ошибка обновления списка мемов:', error);
+      }
     }
-    .meme-card:hover {
-      transform: translateY(-2px);
-    }
-    .meme-image {
-      max-width: 100%;
-      max-height: 70vh;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-      border-radius: 8px 8px 0 0;
-    }
-    .upload-modal {
-      background: rgba(0,0,0,0.5);
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-  </style>
+
+    window.addEventListener('load', async () => {
+      await updateMemeList();
+    });
+  </script>
 </head>
-<body class="bg-gradient-to-b from-orange-50 to-orange-100 min-h-screen">
-
-<header class="bg-gradient-to-r from-orange-600 to-orange-500 text-white px-6 py-4 flex justify-between items-center sticky top-0 z-50 shadow-xl">
-  <div class="flex items-center gap-3">
-    <img src="https://i.imgur.com/SyOVYBY.jpeg" class="h-12 w-12 rounded-full ring-2 ring-white/30 hover:ring-orange-200 transition-all" alt="HEMIMEME Logo" />
-    <h1 class="text-3xl font-bold font-mono">
-      <i class="fas fa-fire mr-2"></i>HEMIMEME
-    </h1>
-  </div>
-  <div class="flex items-center gap-4">
-    <button id="uploadButton" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 transition-all">
-      <i class="fas fa-plus mr-2"></i> Submit Meme
-    </button>
-    <button id="connectButton" class="bg-white/90 text-orange-600 px-6 py-3 rounded-full shadow-lg hover:bg-white hover:scale-105 transition-all">
-      <i class="fas fa-wallet mr-2"></i> Connect Wallet
-    </button>
-  </div>
-</header>
-
-<main class="container mx-auto px-4 py-12">
-  <section class="bg-white p-8 rounded-xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-6 text-center text-orange-600">Trending Memes</h2>
-    <div id="votingGrid" class="flex flex-col gap-8"></div>
-  </section>
-</main>
-
-<div class="upload-modal" id="uploadModal">
-  <div class="bg-white p-6 rounded-xl w-96">
-    <div class="flex justify-between items-center mb-4">
-      <h2 class="text-2xl font-bold">Submit New Meme</h2>
-      <button id="closeModal" class="text-orange-600 hover:text-orange-800">
-        <i class="fas fa-times"></i>
-      </button>
+<body class="bg-gray-100 font-sans">
+  <header class="bg-orange-500 text-white p-4">
+    <h1 class="text-2xl font-bold">HEMIMEME</h1>
+  </header>
+  <main class="max-w-4xl mx-auto p-4">
+    <div class="flex justify-between mb-4">
+      <button id="submitMemeButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Submit Meme</button>
+      <button id="connectButton" class="bg-white/90 text-orange-600 px-4 py-2 rounded hover:bg-white">Connect Wallet</button>
     </div>
-    <form id="memeForm" class="space-y-4">
-      <div>
-        <label class="block text-sm font-medium mb-2">Discord Username</label>
-        <input type="text" id="discordName" required class="w-full px-4 py-2 border rounded-lg" placeholder="username#1234" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium mb-2">Meme Title</label>
-        <input type="text" id="memeTitle" required class="w-full px-4 py-2 border rounded-lg" placeholder="Enter meme title" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium mb-2">Image URL</label>
-        <input type="url" id="memeUrl" required class="w-full px-4 py-2 border rounded-lg" placeholder="https://example.com/meme.jpg" />
-      </div>
-      <div class="flex justify-end gap-4">
-        <button type="button" id="cancelBtn" class="px-4 py-2 text-gray-600 hover:text-gray-800">Cancel</button>
-        <button type="submit" class="px-4 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600">Submit</button>
-      </div>
-    </form>
-  </div>
-</div>
-
-<script type="module">
-  import { connectWallet, loadMemes, voteMeme, addMeme, getContract } from './blockchain.js';
-
-  const connectButton = document.getElementById('connectButton');
-  const votingGrid = document.getElementById('votingGrid');
-  const uploadButton = document.getElementById('uploadButton');
-  const uploadModal = document.getElementById('uploadModal');
-  const closeModalBtn = document.getElementById('closeModal');
-  const memeForm = document.getElementById('memeForm');
-  const cancelBtn = document.getElementById('cancelBtn');
-
-  let walletConnected = false;
-  let memeMetadata = JSON.parse(localStorage.getItem('memeMetadata')) || [];
-
-  async function renderMemes() {
-    votingGrid.innerHTML = '';
-    try {
-      console.log('Загрузка мемов из контракта...');
-      const contractMemes = await loadMemes();
-      console.log('Мемы из контракта:', contractMemes);
-
-      const localMemes = contractMemes.map(meme => {
-        const metadata = memeMetadata.find(m => m.id === meme.id) || {};
-        return {
-          id: meme.id,
-          title: meme.title,
-          url: metadata.url || 'https://via.placeholder.com/300x200?text=Meme+Image',
-          author: metadata.author || `user${meme.id + 1}#${1000 + meme.id}`,
-          votes: meme.votes
-        };
-      });
-      console.log('Обновленный локальный массив мемов:', localMemes);
-
-      if (localMemes.length === 0) {
-        votingGrid.innerHTML = '<p class="text-gray-500 text-center">No memes available. Add a meme to get started!</p>';
-        return;
-      }
-
-      localMemes.forEach(meme => {
-        const memeCard = document.createElement('div');
-        memeCard.className = 'meme-card p-4 shadow rounded-lg';
-        memeCard.innerHTML = `
-          <img src="${meme.url}" alt="${meme.title}" class="meme-image mb-4" onerror="this.src='https://via.placeholder.com/300x200?text=Meme+Not+Found'" />
-          <h3 class="text-xl font-semibold">${meme.title}</h3>
-          <p class="text-sm text-gray-600 mb-2">Author: ${meme.author}</p>
-          <p class="font-bold mb-2">Votes: ${meme.votes}</p>
-          <button class="vote-btn bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600" data-id="${meme.id}">Vote</button>
-        `;
-        votingGrid.appendChild(memeCard);
-      });
-
-      document.querySelectorAll('.vote-btn').forEach(button => {
-        button.addEventListener('click', async (e) => {
-          if (!walletConnected || !getContract()) {
-            alert('Please connect your wallet first!');
-            return;
-          }
-          const memeId = parseInt(e.target.dataset.id);
-          console.log('Голосование за мем ID:', memeId);
-          const success = await voteMeme(memeId);
-          if (success) {
-            console.log('Голосование успешно, обновляем мемы...');
-            await renderMemes();
-          }
-        });
-      });
-    } catch (error) {
-      console.error('Ошибка загрузки мемов:', error);
-      votingGrid.innerHTML = `
-        <p class="text-red-500">Failed to load memes: ${error.message}</p>
-        <button id="retryBtn" class="mt-4 px-4 py-2 bg-orange-500 text-white rounded hover:bg-orange-600">Retry</button>
-      `;
-      document.getElementById('retryBtn')?.addEventListener('click', renderMemes);
-    }
-  }
-
-  connectButton.addEventListener('click', async () => {
-    try {
-      walletConnected = await connectWallet();
-      if (walletConnected && getContract()) {
-        connectButton.textContent = 'Wallet Connected';
-        connectButton.disabled = true;
-        await renderMemes();
-      } else {
-        throw new Error('Failed to initialize contract');
-      }
-    } catch (error) {
-      console.error('Ошибка подключения кошелька:', error);
-      walletConnected = false;
-      alert('Failed to connect wallet: ' + error.message);
-    }
-  });
-
-  uploadButton.addEventListener('click', () => {
-    uploadModal.style.display = 'flex';
-  });
-
-  closeModalBtn.addEventListener('click', () => {
-    uploadModal.style.display = 'none';
-  });
-
-  cancelBtn.addEventListener('click', () => {
-    uploadModal.style.display = 'none';
-  });
-
-  memeForm.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    if (!walletConnected || !getContract()) {
-      alert('Please connect your wallet first!');
-      return;
-    }
-    const discordName = document.getElementById('discordName').value.trim();
-    const memeTitle = document.getElementById('memeTitle').value.trim();
-    const memeUrl = document.getElementById('memeUrl').value.trim();
-
-    if (!discordName || !memeTitle || !memeUrl) {
-      alert('Please fill in all fields!');
-      return;
-    }
-
-    try {
-      console.log('Добавление мема:', memeTitle);
-      const added = await addMeme(memeTitle);
-      if (added) {
-        const currentContract = getContract();
-        const memeCount = (await currentContract.memeCount()).toNumber();
-        const newId = memeCount - 1;
-        console.log('Новый мем добавлен с ID:', newId);
-
-        memeMetadata.push({
-          id: newId,
-          url: memeUrl,
-          author: discordName
-        });
-        localStorage.setItem('memeMetadata', JSON.stringify(memeMetadata));
-
-        alert('Meme successfully added!');
-        uploadModal.style.display = 'none';
-        memeForm.reset();
-        await renderMemes();
-      }
-    } catch (error) {
-      console.error('Ошибка добавления мема:', error);
-      alert('Failed to add meme: ' + error.message);
-    }
-  });
-
-  window.addEventListener('load', async () => {
-    try {
-      if (window.ethereum && window.ethereum.selectedAddress) {
-        walletConnected = await connectWallet();
-        if (walletConnected && getContract()) {
-          connectButton.textContent = 'Wallet Connected';
-          connectButton.disabled = true;
-          await renderMemes();
-        }
-      } else {
-        votingGrid.innerHTML = '<p class="text-gray-500 text-center">Connect your wallet to see votes and vote.</p>';
-      }
-    } catch (error) {
-      console.error('Ошибка при загрузке страницы:', error);
-      votingGrid.innerHTML = '<p class="text-red-500">Error loading page: ' + error.message + '</p>';
-    }
-  });
-</script>
-
+    <section>
+      <h2 class="text-xl font-semibold mb-4">Trending Memes</h2>
+      <div id="memeList" class="grid grid-cols-1 gap-4"></div>
+    </section>
+    <section id="memeFormSection" class="hidden mt-8">
+      <h2 class="text-xl font-semibold mb-4">Submit New Meme</h2>
+      <form id="memeForm" class="bg-white p-6 rounded-lg shadow-md">
+        <div class="mb-4">
+          <label for="discordUsername" class="block text-gray-700">Discord Username</label>
+          <input type="text" id="discordUsername" class="w-full p-2 border rounded" required>
+        </div>
+        <div class="mb-4">
+          <label for="memeTitle" class="block text-gray-700">Meme Title</label>
+          <input type="text" id="memeTitle" class="w-full p-2 border rounded" required>
+        </div>
+        <div class="mb-4">
+          <label for="memeUrl" class="block text-gray-700">Image URL</label>
+          <input type="url" id="memeUrl" class="w-full p-2 border rounded" required>
+        </div>
+        <div class="flex justify-end gap-4">
+          <button type="button" id="cancelMemeButton" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">Cancel</button>
+          <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Submit</button>
+        </div>
+      </form>
+    </section>
+  </main>
+  <script>
+    document.getElementById('submitMemeButton').addEventListener('click', () => {
+      document.getElementById('memeFormSection').classList.toggle('hidden');
+    });
+    document.getElementById('cancelMemeButton').addEventListener('click', () => {
+      document.getElementById('memeFormSection').classList.add('hidden');
+      document.getElementById('memeForm').reset();
+    });
+  </script>
 </body>
 </html>
